# ClearC

./: .gitignore  DESIGN.md  LICENSE  README.md  README_zh.md  index.html  package-lock.json  package.json  tailwind.config.js
.comate/specs/clearc/: doc.md  summary.md  tasks.md
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cleaner/: mod.rs
src-tauri/src/commands/: backup.rs  clean.rs  mod.rs  monitor.rs  rules.rs  scan.rs  schedule.rs
src-tauri/src/database/: migration.rs  mod.rs  models.rs
src-tauri/src/monitor/: mod.rs  tracker.rs  watcher.rs
src-tauri/src/rules/: engine.rs  templates.rs
src-tauri/src/scanner/: app_cache.rs  big_file.rs  duplicate.rs  mod.rs  privacy.rs  startup.rs  system_junk.rs
src-tauri/src/utils/: hash.rs  mod.rs  path.rs  privilege.rs  whitelist.rs
src/components/common/: Badge.tsx  Button.tsx  CleanConfirm.tsx  CleanReport.tsx  EmptyState.tsx  FileList.tsx  PermissionModal.tsx  ScanProgress.tsx  StatsCard.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/modules/AppCache/: index.tsx
src/components/modules/BigFile/: index.tsx
src/components/modules/CleanImpact/: index.tsx
src/components/modules/CleanSchedule/: index.tsx
src/components/modules/DiskMonitor/: index.tsx
src/components/modules/HelpCenter/: index.tsx
src/hooks/: useClean.ts  useIpc.ts  useScan.ts
src/stores/: configStore.ts
src/styles/: global.css
src/utils/: constants.ts  format.ts  security.ts
(+11 files in other folders)
