[package]
name = "clearc"
version = "0.1.0"
description = "Windows C盘智能清理工具"
authors = ["ClearC"]
edition = "2021"

[lib]
name = "clearc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-event = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "2"
sha2 = "0.10"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
toml = "0.8"
windows = { version = "0.58", features = [
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
] }
